Revert "fix: remove horizontal scrolling"
This reverts commit 64ddd13667ef1c310448040f5c9aac6f4c96974e.

--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -4,6 +4,7 @@
   position: sticky;
   top: 0;
   left: 0;
+  width: 100vw;
   height: 80px;
   display: grid;
   grid-template-columns: 1fr 8fr 1fr;
